--- a/index.html
+++ b/index.html
@@ -2,66 +2,54 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khatabook</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital@0;1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Doodle Search</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!-- header -->
-    <header>
-        <nav class="nav-sty">
-            <img class="nav-img-sty" src="./assets/header2.svg" alt="khatabook-logo">
-            <div class="head-div-sty">
+  <div class="container">
+    <img class="Doodle-img-sty" src="./asset/Doodle Search.svg" alt="Doodle-img">
+    <div class="search-main">
 
-                <img src="./assets/header1.svg" alt="phone-icon">
-                <p class="nav-para-sty">9606800800</p>
-                <button class="nav-btn-sty" type="submit">
-                    Log In
-                </button>
 
-            </div>
-        </nav>
-    </header>
-    <!-- hero section -->
-    <section>
-        <div class="container">
-            <div class="content-sty">
-                <h6 class="content-sty-first-heading">(aur bhi)</h6>
-                <h3 class="content-sty-heading">Business hua <span class="content-sty-symbol">^</span>easy</h3>
-                <p class="content-sty-para">Khatabook - the complete business management platform for MSMEs</p>
-            </div>
-            <img class="content-rgt-img" src="./assets/website_adv_banner.svg" alt="website_adv_banner">
-        </div>
-        <img class="vehicle-img-sty" src="./assets/img-3.svg" alt="asset-14">
-    </section>
-    <div class="container-pur-sty">
-        <div class="inner-box1">
-            <img src="./assets/svg+xml;base64,PHN2ZyB3aWR0aD0iNTgiIGhlaWdodD0iNjQiIHZpZXdCb3g9IjAgMCA1OCA2NCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBmaWxsLXJ1bGU9ImV2ZW5vZGQiIGNsaXAtcnVsZT0iZXZlbm9kZCIgZD0iTTM5LjEz.svg"
-                alt="book-img">
-            <div class="inner-box1-content">
-                <h5>5 Cr+ Businesses using our free apps</h5>
-                <p>Access your account anywhere, anytime.</p>
-                <div class="inner-box1-icon">
-                    <img src="./assets/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48bWFzayBpZD0ibWFzazBfMTI4NF8yNDY5OSIgbWFza1VuaXRzPSJ1c2VyU3BhY2VPblVzZSIg.svg"
-                        alt="">
-                    <h5>Play Store</h5>
-                    <img src="./assets/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJNMjIuNSAxMkMyMi41IDE3Ljc5NiAxNy44MDEyIDIyLjUgMTIgMjIuNUM2LjE5.svg"
-                        alt="">
-                    <h5>App Store</h5>
-                </div>
-            </div>
-        </div>
-        <div class="inner-box2">
-
-        </div>
+      <div class="search-box">
+        <img class="search-icon-sty" src="./asset/search-icon.svg" alt="search-icon">
+        <input class="input-box-sty" type="text">
+        <img class="close-icon-sty" src="./asset/close-icon.svg" alt="close-icon">
+      </div>
+      <div class="suggestion-menu">
+           <hr>
+            <p class="suggestion-menu-content-sty">
+              <img  class="sugg-search-icon-sty"    src="./asset/search-icon.svg" alt="search-icon">
+           <span class="para-sty">can i learn web development in 3 months</p></span>   
+            <p class="suggestion-menu-content-sty">
+              <img     class="sugg-search-icon-sty"  src="./asset/search-icon.svg" alt="search-icon">
+           <span class="para-sty">can i learn web development in 3 months</p></span>   
+            <p class="suggestion-menu-content-sty">
+              <img  class="sugg-search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon">
+           <span class="para-sty">can i learn web development in 3 months</p></span>   
+            <p class="suggestion-menu-content-sty">
+              <img  class="sugg-search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon">
+           <span class="para-sty">can i learn web development in 3 months</p></span>   
+            <p class="suggestion-menu-content-sty">
+              <img  class="sugg-search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon">
+           <span class="para-sty">can i learn web development in 3 months</p></span>   
+           </div>
+      </div>
     </div>
+
+  </div>
+  <img class="doodle-shapes-sty" src="./asset/doodle shapes.svg" alt="doodle-shapes">
+
+
+
+
+
 </body>
 
 </html>
