--- a/index.html
+++ b/index.html
@@ -2,53 +2,45 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doodle Search</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@0;1&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doodle Search</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="container">
-    <img class="Doodle-img-sty" src="./asset/Doodle Search.svg" alt="Doodle-img">
-    <div class="search-main">
+    <div class="container">
+        <img class="doodle-img-sty" src="./asset/Doodle Search.svg" alt="DoodleSearch">
 
+        <div class="search-menu">
+            <div class="search-main">
 
-      <div class="search-box">
-        <img class="search-icon-sty" src="./asset/search-icon.svg" alt="search-icon">
-        <input class="input-box-sty" type="text">
-        <img class="close-icon-sty" src="./asset/close-icon.svg" alt="close-icon">
-      </div>
-      <div class="suggestion-menu">
-           <hr>
-            <p class="suggestion-menu-content-sty">
-              <img  class="sugg-search-icon-sty"    src="./asset/search-icon.svg" alt="search-icon">
-           <span class="para-sty">can i learn web development in 3 months</p></span>   
-            <p class="suggestion-menu-content-sty">
-              <img     class="sugg-search-icon-sty"  src="./asset/search-icon.svg" alt="search-icon">
-           <span class="para-sty">can i learn web development in 3 months</p></span>   
-            <p class="suggestion-menu-content-sty">
-              <img  class="sugg-search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon">
-           <span class="para-sty">can i learn web development in 3 months</p></span>   
-            <p class="suggestion-menu-content-sty">
-              <img  class="sugg-search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon">
-           <span class="para-sty">can i learn web development in 3 months</p></span>   
-            <p class="suggestion-menu-content-sty">
-              <img  class="sugg-search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon">
-           <span class="para-sty">can i learn web development in 3 months</p></span>   
-           </div>
-      </div>
+                <img class="search-icon-sty" src="./asset/search-icon.svg" alt="search-icon">
+                <input class="search-input-sty" type="text">
+                <img class="close-icon-sty" src="./asset/close-icon.svg" alt="close-icon">
+
+            </div>
+            <div class="suggestion-menu">
+                <div class="top-border">
+
+                </div>
+                <p><img class="search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon"><span >can i learn web development in 3 months</span> </p>
+                <p><img class="search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon"><span >can i learn web development in 6 months</span> </p>
+                <p><img class="search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon"><span >can i learn web development in 9 months</span> </p>
+                <p><img class="search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon"><span >can i learn web development in 12 months</span> </p>
+                <p><img class="search-icon-sty"   src="./asset/search-icon.svg" alt="search-icon"><span >can i learn web development in 10 months</span> </p>
+
+            </div>
+
+        </div>
+
     </div>
-
-  </div>
-  <img class="doodle-shapes-sty" src="./asset/doodle shapes.svg" alt="doodle-shapes">
-
-
-
-
+    <div class="container-shapes">
+        <img class="doodle-shapes" src="./asset/doodle shapes.svg" alt="">
+    </div>
 
 </body>
 
