--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div class="search-main">
 
                 <img class="search-icon-sty" src="./asset/search-icon.svg" alt="search-icon">
-                <input class="search-input-sty" type="text">
+                <form action="https://www.google.com/search">
+                    <input class="search-input-sty" type="text" name="q">
+                </form>
                 <img class="close-icon-sty" src="./asset/close-icon.svg" alt="close-icon">
 
             </div>
